--- a/wp-content/plugins/paid-memberships-pro/css/admin.css
+++ b/wp-content/plugins/paid-memberships-pro/css/admin.css
@@ -1,4 +1,4 @@
-.pmpro_admin {background: url(../images/PaidMembershipsPro-grey.gif) bottom right no-repeat !important; padding-bottom: 70px; }
+.pmpro_admin {//background: url(../images/PaidMembershipsPro-grey.gif) bottom right no-repeat !important; padding-bottom: 70px; }
 
 .pmpro_admin .pmpro_banner {margin: 2em 0; font-family: Georgia, "Times New Roman", Times, serif; }
 .pmpro_admin .pmpro_banner .pmpro_meta {float: right; margin: 2em 0 1em 1em; font-size: 12px; font-style: italic; }
